<resources>
    <string name="app_name">EZShoppingApp</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="re_password">Re-enter password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="qr_code">QR Code</string>
    <string name="logo">logo</string>
    <string name="submit">Submit</string>
    <string name="email">E-mail</string>
    <string name="click">Don\'t have an account, click</string>
    <string name="here">here</string>
    <string name="back">back</string>
</resources>