<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:barrierMargin="@dimen/material_emphasis_high_type">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="clip_horizontal"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#616161"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_person_24"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="45dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#616161"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_info_24"
        tools:ignore="TextViewEdits" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_above="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="25dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-1dp"
        android:textAlignment="center"
        android:text="@string/click" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="41dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/here"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark" />


</RelativeLayout>