<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="181dp"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/reg_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="clip_horizontal"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/reg_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#616161"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#616161"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_username"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/submit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#616161"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/reg_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:background="#EDE9E9"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:visibility="visible"
        app:drawableLeftCompat="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_password"
        tools:ignore="TextViewEdits" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="196dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="98dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="196dp"
        android:contentDescription="@string/back"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>